# cgp-serde

./: Cargo.toml  README.md
crates/cgp-serde/: Cargo.toml
crates/cgp-serde-alloc/: Cargo.toml
crates/cgp-serde-alloc/src/providers/: alloc_deserialize.rs
crates/cgp-serde-extra/: Cargo.toml
crates/cgp-serde-extra/src/providers/: base64.rs  date.rs  hex.rs  timestamp.rs
crates/cgp-serde-json/: Cargo.toml
crates/cgp-serde-json/src/: lib.rs
crates/cgp-serde-json/src/impls/: deserialize.rs  from_reader.rs  from_str.rs  mod.rs  to_string.rs
crates/cgp-serde-json/src/providers/: from_reader.rs  from_str.rs  mod.rs  to_string.rs
crates/cgp-serde-tests/: Cargo.toml
crates/cgp-serde-tests/src/tests/: arena.rs  arena_simplified.rs  basic.rs  messages.rs  mod.rs  nested.rs
crates/cgp-serde-typed-arena/: Cargo.toml
crates/cgp-serde-typed-arena/src/providers/: alloc.rs
crates/cgp-serde/src/providers/: bytes.rs  default.rs  deref.rs  display.rs  extend.rs  fields.rs  from.rs  iterator.rs  record.rs  serde.rs  string.rs  try_from.rs
