[workspace]

resolver = "3"

members = [
    "crates/cgp-serde",
    "crates/cgp-serde-extra",
    "crates/cgp-serde-json",
    "crates/cgp-serde-alloc",
    "crates/cgp-serde-typed-arena",
    "crates/cgp-serde-tests",
]

[workspace.package]
rust-version    = "1.90"
edition         = "2024"
license         = "MIT"
repository      = "https://github.com/contextgeneric/cgp"
authors         = ["Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[workspace.dependencies]
cgp                 = { version = "0.7.0" }
cgp-error-anyhow    = { version = "0.7.0" }
serde               = { version = "1.0.219" }
serde_json          = { version = "1.0.143" }
hex                 = { version = "0.4.3" }
base64              = { version = "0.22.1" }
chrono              = { version = "0.4.41" }
typed-arena         = { version = "2.0.2" }

cgp-serde               = { version = "0.1.0", path = "./crates/cgp-serde" }
cgp-serde-extra         = { version = "0.1.0", path = "./crates/cgp-serde-extra" }
cgp-serde-json          = { version = "0.1.0", path = "./crates/cgp-serde-json" }
cgp-serde-alloc         = { version = "0.1.0", path = "./crates/cgp-serde-alloc" }
cgp-serde-typed-arena   = { version = "0.1.0", path = "./crates/cgp-serde-typed-arena" }


[patch.crates-io]
cgp                 = { git = "https://github.com/contextgeneric/cgp.git", branch = "v0.7.0" }
cgp-error-anyhow    = { git = "https://github.com/contextgeneric/cgp.git", branch = "v0.7.0" }