[package]
name         = "cgp-serde-extra"
version      =  "0.1.0-beta"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Extra providers for Serde serialization of bytes and dates"

[dependencies]
cgp         = { workspace = true }
cgp-serde   = { workspace = true }

serde       = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
chrono      = { workspace = true }
