[package]
name         = "cgp-serde-json"
version      =  "0.1.0-beta2"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "CGP wrapper around serde_json"

[dependencies]
cgp         = { workspace = true }
cgp-serde   = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
