[package]
name         = "cgp-serde-json"
version      =  "0.2.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "CGP wrapper around serde_json"

[dependencies]
cgp         = { workspace = true }
cgp-serde   = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
