[package]
name         = "cgp-serde-tests"
version      =  "0.1.0-beta2"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "CGP-enabled serde implementation"

[dependencies]
cgp                     = { workspace = true }
cgp-error-anyhow        = { workspace = true }
cgp-serde               = { workspace = true }
cgp-serde-extra         = { workspace = true }
cgp-serde-json          = { workspace = true }
cgp-serde-alloc         = { workspace = true }
cgp-serde-typed-arena   = { workspace = true }

serde           = { workspace = true, features = ["derive"] }
serde_json      = { workspace = true }
hex             = { workspace = true }
base64          = { workspace = true }
chrono          = { workspace = true }
typed-arena     = { workspace = true }
