[package]
name         = "cgp-serde-typed-arena"
version      =  "0.1.0-beta2"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Arena-based deserialization using cgp-serde"

[dependencies]
cgp                 = { workspace = true }
cgp-serde           = { workspace = true }
cgp-serde-alloc     = { workspace = true }

serde           = { workspace = true }
typed-arena     = { workspace = true }
