[package]
name         = "cgp-serde"
version      =  "0.1.0-beta"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "CGP-enabled serde implementation"

[dependencies]
cgp     = { workspace = true }
serde   = { workspace = true }
